--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,16 @@
 body {
-    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: deeppink;
+    color: #000;
+}
+
+.container {
+    width: 70%;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.post {
+    border: 1rem solid #ccc;
+    padding: 1rem;
+    text-align: left;
 }
