--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif
     color: #000;
 }
 
@@ -14,7 +14,7 @@ body {
     display: flex;
     align-items: center;
     padding: 1.2rem;
-    background: dodgerblue;
+    background: rgb(195, 203, 211);
     -webkit-box-shadow: 6px 7px 50px -13px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 6px 7px 50px -13px rgba(0, 0, 0, 0.75);
     box-shadow: 6px 7px 50px -13px rgba(0, 0, 0, 0.75)
